syntax = "proto3";
package ticket;

import "bet.proto";


service TicketService {
    rpc GetCurrentTicket(GetCurrentTicketRequest) returns (GetCurrentTicketReply);
    rpc ListTickets (ListTicketsRequest) returns (ListTicketsReply);
    rpc SubmitTicket (SubmitTicketRequest) returns (SubmitTicketReply);
}

message Ticket {
    int32 id = 1;
    string submitted_at = 2;
    string price_paid = 3;
    string total_ratio = 4;
    optional bool won = 5;
    repeated bet.Bet bets = 6;
}

message GetCurrentTicketRequest {
    int32 user_id = 1;
}

message GetCurrentTicketReply {
    int32 ticket_id = 1;
    repeated bet.Bet bets = 2;
}

message ListTicketsRequest {
    int32 user_id = 1;
}

message ListTicketsReply {
    repeated Ticket tickets = 1;
}

message SubmitTicketRequest {
    int32 ticket_id = 1;
    float price_paid = 2;
}

message SubmitTicketReply {}


